--- a/src/home.css
+++ b/src/home.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap");
+
+body{
+    background-color: #f8f8f8;
+}
+
 .hero-background {
   position: relative;
   height: 90vh;
@@ -9,10 +15,10 @@
     content: "";
     position: absolute;
     background-color: #f8f8f8;
-    height: 23rem;
+    height: 15rem;
     width: 100%;
     transform: skewY(357deg);
-    bottom: -305px;
+    bottom: -180px;
     z-index: 1;
 }
 
@@ -21,7 +27,6 @@
   align-items: center;
   justify-content: center;
 
-  /* padding: 0 10rem; */
   background-color: #00000047;
 }
 
